Preliminary support for building Gradle on Java 9 (#5811)
This is a follow-up of https://github.com/gradle/gradle/pull/5749 . #5749 introduced Java 9 compiler but broke IDE import. This PR aims at fixing IDE import. With this PR, we can run `./gradlew idea` and set project SDK to JDK 9 to run integration tests.

The  changes are:

- Upgrade javaassist to JDK9-compatible version
- Adds empty implementation to `AnnotationProcessingCompileTask` and `ResourceCleaningCompilationTask`
- Remove support of Java 5 because Java 9 can't generate Java 5 bytecode any more.
- Slightly increased wrapper size limitation because two extra classes are added.