@@ -65,6 +65,10 @@ class AnnotationProcessingCompileTask implements JavaCompiler.CompilationTask {
     }
 
     @Override
+    public void addModules(Iterable<String> moduleNames) {
+    }
+
+    @Override
     public void setProcessors(Iterable<? extends Processor> processors) {
         throw new UnsupportedOperationException("This decorator already handles annotation processing");
     }
@@ -116,7 +120,7 @@ class AnnotationProcessingCompileTask implements JavaCompiler.CompilationTask {
 
     private Processor instantiateProcessor(Class<?> processorClass) {
         try {
-            return (Processor) processorClass.newInstance();
+            return (Processor) processorClass.getConstructor().newInstance();
         } catch (Exception e) {
             throw new IllegalArgumentException("Could not instantiate annotation processor '" + processorClass.getName() + "'");
         }
